[package]
name = "uonetplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["full"] }
actix-web = { version = "4.2", default-features = false, features = ["rustls", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
html_parser = "0.6"
hyper = {version="0.14", features=["full"]}
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
hyper-rustls = "0.23.2"
rustls = {version = "0.20.8", features=["dangerous_configuration"]}
cookie = "0.17.0"
ics = "0.5"
unidecode = "0.3.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
